# Splice1

./: INTEGRATION.md  README.md  coordination.test.ts  coordination_demo.ts  demo.ts  gitignore  package-lock.json  package.json  test.ts  tsconfig.json  tsconfig.test.json
.github/workflows/: main.yml
dashboard/: index.html
python/: pyproject.tml  pyproject.toml
python/splice_mcp/: server.py
scratch/: operational_validation.ts
src/: AgentCoordinator.ts  BrowserManager.ts  CommandCenterServer.ts  CryptoManager.ts  DiscordWebhook.ts  OpenClawGateway.ts  SecurityAuditor.ts  SemanticExtractor.ts  Sentinel.ts  SpliceAgentSystem.ts  SpliceCliConfig.ts  TelemetryInterceptor.ts  bridge_server.ts  cli.ts  gen_report.ts  index.ts  types.ts  validation.ts
