[project]
name = "splice-mcp"
version = "1.0.0"
description = "Python MCP Server and SDK for Splice Enterprise"
authors = [
    {name = "Splice Team"}
]
readme = "../README.md"
license = "MIT"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
splice-mcp = "splice_mcp.server:cli"

[project.urls]
Homepage = "https://github.com/Arnavnemade1/Splice"
Issues = "https://github.com/Arnavnemade1/Splice/issues"
